log
Wed Oct 14 19:37:54 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:11: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
       if (n -> sudo[i][j] = num) {
           ^
sudoku.c:64:22: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
             pushBack(lista , nuevo);
                      ^~~~~
                      list
sudoku.c:64:22: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:41:52 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:11: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
       if (n -> sudo[i][j] = num) {
           ^
sudoku.c:59:27: error: ‘num’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       if (n -> sudo[i][j] = num) {
           ~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:42:55 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:11: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
       if (n->sudo[i][j] = num) {
           ^
sudoku.c:59:25: error: ‘num’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       if (n->sudo[i][j] = num) {
           ~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:44:18 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
3f33bd1
Wed Oct 14 19:58:13 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0a59019
Wed Oct 14 19:58:24 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3220e39
Wed Oct 14 21:02:12 UTC 2020: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
06ac41e
Sat Oct 17 16:18:04 UTC 2020: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 40 insertions(+), 6 deletions(-)
 tests:  0|0
48d71c6
Sat Oct 17 16:20:36 UTC 2020: 
 sudoku.c | 36 ++++++++++++++++++------------------
 1 file changed, 18 insertions(+), 18 deletions(-)
 tests:  2|4
total_score: 15/70
1c9a712
Sat Oct 17 16:37:17 UTC 2020: 
 sudoku.c | 45 +++++++++++++++++++++++++++------------------
 1 file changed, 27 insertions(+), 18 deletions(-)
 tests:  3|4
total_score: 20/70
604c49c
Sat Oct 17 16:40:19 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
40ab61f
Sat Oct 17 21:03:48 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
7d82c40
Sat Oct 17 22:03:32 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b21d322
Sat Oct 17 22:06:57 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
a74bef9
Sat Oct 17 22:07:11 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cb211b5
Sat Oct 17 22:20:39 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
c65e27c
Sun Oct 18 16:48:04 UTC 2020: 
 sudoku.c | 57 +++++++++++++++++++++++++++++++--------------------------
 1 file changed, 31 insertions(+), 26 deletions(-)
 tests:  3|3
total_score: 25/70
512b899
Sun Oct 18 21:15:07 UTC 2020: 
 sudoku.c | 53 ++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 36 insertions(+), 17 deletions(-)
 tests:  1|4
total_score: 10/70
1229eae
Sun Oct 18 21:17:03 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ea2e458
Sun Oct 18 21:18:37 UTC 2020: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
e369771
Sun Oct 18 21:20:52 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
a07a313
Sun Oct 18 21:21:46 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
d3931f6
Sun Oct 18 21:22:09 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
5233f0c
Sun Oct 18 21:36:58 UTC 2020: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
dcee848
Sun Oct 18 21:39:40 UTC 2020: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
609eb72
Sun Oct 18 21:44:13 UTC 2020: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
e6cf71c
Sun Oct 18 21:44:53 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a930a1c
Sun Oct 18 21:47:06 UTC 2020: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
06ab7ad
Sun Oct 18 21:49:40 UTC 2020: 
 sudoku.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  10|0
total_score: 70/70
43eb0eb
